simple release system

--- a/DeadSpace2SaveEditor/DeadSpace2SaveEditor.csproj
+++ b/DeadSpace2SaveEditor/DeadSpace2SaveEditor.csproj
@@ -141,4 +141,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Y "$(TargetDir)*$(TargetExt)" "$(SolutionDir)\download\"</PostBuildEvent>
+  </PropertyGroup>  
 </Project>
